#5225 Fix NPE on DocRef